--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,11 @@
-
-@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Chivo:wght@700&display=swap');
 
-body{
-  background-color: #FAFCF0;
+body {
+  background-color: #fafcf0;
 }
 .App {
-  background-color: #FAFCF0;
+  background-color: #fafcf0;
   text-align: center;
 }
 
@@ -45,7 +44,7 @@ body{
   }
 }
 
-.header{
+.header {
   background-color: #1d3136;
   position: fixed;
   width: 100%;
@@ -53,86 +52,87 @@ body{
   z-index: 1;
 }
 
-.menu{
-  display:inline-block;
+.menu {
+  display: inline-block;
   padding: 20px;
   color: white;
 }
-.menu:hover{
-background-color: white;
-color: green;
+.menu:hover {
+  background-color: white;
+  color: green;
 }
-
-
-
-
 
 /* ini untuk home */
 
-
-
-.navbar-farm{
+.navbar-farm {
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
 }
 .brand-text-icon {
   font-style: normal;
   font-weight: bold;
   font-size: 42px;
-  line-height: 63px;  
+  line-height: 63px;
   font-family: Poppins, sans-serif;
-  color: #218661 ;
- 
+  color: #218661;
 }
 .text-icon {
-
   font-weight: 300;
   font-size: 16px;
-  line-height: 27px;  
+  line-height: 27px;
   font-family: Poppins, sans-serif;
-  color: #9A9C90;
- 
+  color: #9a9c90;
 }
 .margin-hero {
-  padding-top:150px ;
+  padding-top: 150px;
 }
-.background-home{
-  background-color: #FAFCF0;
-}
-
-.all-title{
-  font-family: Chivo,sans-serif;
+.background-home {
+  background-color: #fafcf0;
 }
 
-.product{
-  background: #FFFFFF;
+.all-title {
+  font-family: Chivo, sans-serif;
+}
+
+.product {
+  background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 12px;
   min-height: 387px;
 }
-.name-product{
+.name-product {
   padding: 0;
-  font-family: Chivo,sans-serif;
+  font-family: Chivo, sans-serif;
   font-weight: 700;
   font-size: 30px;
   color: #218661;
-
 }
-.price-product{
+.price-product {
   padding: 0px;
-  font-family: Chivo,sans-serif;
+  font-family: Chivo, sans-serif;
   font-weight: 700;
   font-size: 20px;
   color: #218661;
-  
 }
-.loc-product{
+.loc-product {
   padding: 0px;
-  font-family: Poppins,sans-serif;
+  font-family: Poppins, sans-serif;
   font-weight: 400;
   font-size: 16px;
-  color: #4DAC8A;
-  
+  color: #4dac8a;
 }
 
+/* Tambahan admin */
 
+.card-person {
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 12px;
+  min-height: 157px;
+}
 
+.card-category {
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 12px;
+  min-height: 100px;
+}
